Fixed spacing on cards and title page

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
         <a href="#design-section">Design</a>
         <a href="#mot-graph-section">Motion Graphics</a>
         <a href="#modeling-section">3D Modeling</a>
-        <a href="#illust-section">Illustrations</a>
     </div>
     <div id="home" class="scrollable-container">
         <div class="about-section">
             <h1>hi! i'm</h1>
-            <p>I'm studying media and technology at New York University.</p>
+            <p style="max-width: 90vw;">I'm student at New York University, studying media and technology.</p>
             <div class="logo-container">
                 <img src="Media/Logo.png" class="logo">
                 <div class="logo-bg-animation2"></div>
@@ -70,13 +69,13 @@
                     <div class="emb-video-card">
                         <iframe class="emb-video"
                         src="https://www.youtube.com/embed/eHEVb4cnOno" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <p>Created using <b>AfterEffects</b>. I made a promotional video for Tandon Motorsports, a Vertically Integrated Project at NYU. I captured footage and media, then used rotoscoping and various distortion techniques to create the special effects.</p>
+                        <p>Created using <b>PremierePro</b> and <b>AfterEffects</b>. I made a promotional video for Tandon Motorsports, a Vertically Integrated Project at NYU. I gathered the footage, then used rotoscoping and various distortion techniques to create the special effects.</p>
                     </div>
                 </div>
             </div>
             <div class="card-container animate-on-scroll">
                 <div class="video-container">
-                    <h3>Kinetic Typography</h3>
+                    <h3>"Wild Geese" - Kinetic Typography</h3>
                     <div class="emb-video-card">
                         <iframe class="emb-video"
                         src="https://www.youtube.com/embed/7phFWOM4iMw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -178,7 +177,7 @@
                         <span class="dot2" onclick="currentSlide2(2)"></span>
                         <span class="dot2" onclick="currentSlide2(3)"></span>
                         </div>
-                        <p>Models, lighting, and textures created in <b>Maya</b> and rendered through <b>Arnold</b>. Used displacement mapping for textures and custom UV maps for the surfaces.</p>
+                        <p>Models, lighting, and textures created in <b>Maya</b> and rendered through <b>Arnold</b>, then did some final photo editing in <b>Photoshop</b>. I used displacement mapping for textures and custom UV maps for the surfaces.</p>
                     </div>
                 </div>
             </div>
