added about page

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <a href="#home" class="nav-logo">MEGAN KIM</a>
     <div class="nav animate-on-scroll">
         <a href="#work-section">Selected Work</a>
-        <a href="#web-dev-section">Web Dev</a>
         <a href="#design-section">Design</a>
         <a href="#modeling-section">3D Modeling</a>
+        <a href="pages/about.html">About Me</a>
     </div>
     <div class="about-section">
         <h2>hi! i'm</h2>
@@ -30,8 +30,8 @@
     </div>
     <div id="home" class="scrollable-container">
             <span id="work-section" class="sections work-section">
-                <h1>SELECTED WORK</h1>
-                <br/><br/>
+                <h1>CASE STUDY</h1>
+                <br/><br/><br/>
                 <a href="pages/dibby.html">
                     <div class="case-study-container">
                         <div class="case-study-top">
@@ -45,58 +45,11 @@
                     </div>
                 </a>
             </span>
-        <span id="web-dev-section" class="sections web-dev-section">
-            <h1>WEB DEV</h1>
-            <div class="wrapper">
-                <div class="card-container animate-on-scroll">
-                    <div class="video-container">
-                        <h3>NYU Tandon Motorsports</h3>
-                        <div class="emb-video-card">
-                            <iframe class="emb-video"
-                            src="https://www.youtube.com/embed/eHEVb4cnOno" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            <p>Created using <b>PremierePro</b> and <b>AfterEffects</b>. I made a promotional video for Tandon Motorsports, a Vertically Integrated Project at NYU. I gathered the footage, then used rotoscoping and various distortion techniques to create the special effects.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-container animate-on-scroll">
-                    <div class="video-container">
-                        <h3>"Wild Geese" - Kinetic Typography</h3>
-                        <div class="emb-video-card">
-                            <iframe class="emb-video"
-                            src="https://www.youtube.com/embed/7phFWOM4iMw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            <p>Created using <b>Illustrator</b> and <b>AfterEffects</b>. I created a kinetic typography video for the poem "Wild Geese," by Mary Oliver and narrated by Tom Hiddleston.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="wrapper">
-                <div class="card-container animate-on-scroll">
-                    <div class="video-container">
-                        <h3>Drink Water! - Puppet Animation</h3>
-                        <div class="emb-video-card">
-                            <iframe class="emb-video"
-                            src="https://www.youtube.com/embed/DreBNSt7PSw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            <p>Created using <b>Illustrator</b> and <b>AfterEffects</b>. I designed an original character in Illustrator, then transferred it over to AfterEffects. I animated her using puppet pins for the leaf hair movement.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-container animate-on-scroll">
-                    <div class="video-container">
-                        <h3>Cat Cafe Logo Animation</h3>
-                        <div class="emb-video-card">
-                            <iframe class="emb-video"
-                            src="https://www.youtube.com/embed/0A200kCM20I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            <p>Created using <b>Illustrator</b> and <b>AfterEffects</b>. This is a short animated logo I made for a fictional cat cafe.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </span>
         <span id="design-section" class="sections design-section">
             <h1>LOGOS</h1>
             <div class="card-container">
                 <div class="animate-on-scroll image-card">
-                    <h3 style="width: 25vw;">NYU Tandon Motorsports Logo</h3>
+                    <h3 style="width: 25vw;">NYU Motorsports Logo</h3>
                     <img src="Media/des_logo_1.png"/>
                 </div>
                 <div class="animate-on-scroll image-card">
