--- a/pages/dibby.html
+++ b/pages/dibby.html
@@ -16,9 +16,9 @@
     <a href="../index.html" class="nav-logo">MEGAN KIM</a>
     <div class="nav">
         <a href="../index.html#work-section">Selected Work</a>
-        <a href="../index.html#web-dev-section">Web Dev</a>
         <a href="../index.html#design-section">Design</a>
         <a href="../index.html#modeling-section">3D Modeling</a>
+        <a href="about.html">About Me</a>
     </div>
     <span class="content">
         <div class="case-study-container">
