added senior design process blog and fixed the scrolling issue

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div id="home" class="scrollable-container">
             <span id="work-section" class="sections work-section">
-                <h1>CASE STUDY</h1>
+                <h1>SELECTED WORK</h1>
                 <br/><br/><br/>
                 <a href="pages/dibby.html">
                     <div class="case-study-container">
@@ -40,8 +40,21 @@
                             <p>learn more >>></p>
                         </div>
                         <img src="Media/clicksters-team.png">
-                        <h3>Developed AI Chatbot to Streamline Printing Needs </h3>
+                        <h3>1st Place 2023 Dibner Hackathon: <br/>Developed AI Chatbot to Streamline Printing Needs </h3>
                         <p>Our team won 1st place and audience favorite at the 2023 Hack Dibner competition. We went through rounds of surveys, user interviews, ideation, prototyping, and testing to create Dibby: a friendly AI chatbot that streamlines the printing experience for all students and staff at Dibner Library.</p>
+                    </div>
+                </a>
+                <br/><br/><br/>
+                <a href="pages/koreanimation.html">
+                    <div class="case-study-container">
+                        <div class="case-study-top">
+                            <div class="circle-detail"></div>
+                            <div class="circle-detail"></div>
+                            <p>learn more >>></p>
+                        </div>
+                        <img src="Media/header_korean.webp">
+                        <h3>K오REANIMATION: <br/>Interactive Korean Language Learning</h3>
+                        <p>I'm crafting an interactive and educational website to simplify the Korean alphabet for all ages. Utilizing motion graphics, users experience the language visually and audibly, learning through animations that transform letters into words, inspired by traditional Korean patterns and elements. This project aims to intersect technology, education, and culture, offering a fun and entertaining way to explore the beauty of the Korean language.</p>
                     </div>
                 </a>
             </span>
