updated blog for koreanimation case study

--- a/pages/koreanimation.html
+++ b/pages/koreanimation.html
@@ -164,6 +164,43 @@
                 <p>I got various feedback after presenting what I had so far to my class. After the word displays, they recommended highlighting the letter that you were using (because adding placeholder and batchim stacking would make it confusing looking). Also, instead of making a transition out, maybe make it de transition instead (also less work, just have to reverse keyframes and not have to make an entire new word). I have decided to go back and redo some of the words/letter associations because now I have a better sense of how I want my animations to look like and how I want the user to interact with them more. I also want to keep both the art and motion styles consistent throughout, so it all looks like a cohesive game. However, I will have to keep in mind that because there are so many letters I have to go through, I must be able to make them all still relatively unique and not too uniform, otherwise, I run the risk of making the entire game seem monotonous. I also wanted to add some humor or funny animations here, I think it would add to the experience and make it more engaging for users                </p>
 
                 <br/><br/><br/>
+
+                <h4>March 4th</h4>
+                <h3>Revised Storyboard</h3>
+                <br/><br/>
+                <a href="https://www.figma.com/proto/THZo7dN72vO5aPAMbXMDBg/Rough-Draft?type=design&node-id=2-18&t=xr27ouKbqvSfzhSY-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=2%3A18&mode=design">Figma Prototype</a>
+                <br/><br/>
+                <p>I revised my storyboard and finalized my ideas for each of the letters, drawing out what I want each letter transition to look like. I tried making the transitions more seamless without making it seem clunky or awkward, but doing so made me have to take a step back and redo my entire script. This week was mostly refining what I have had so far, which is probably not great since I do have deadlines that I need to get it done by. </p>
+
+                <br/><br/>
+
+                <h3>Branding</h3>
+                <br/>
+                <img src="../Media/koreanimation palette.png">
+                <br/>  <br/>  
+                <p>I then created a finalized color scheme for my project and what kind of style I would like for the animations. When I was researching traditional Korean colors, I found that many different colors are important to Korean culture, so I decided to put my spin on it and curate my palette based on my research as well as personal aesthetics. For the art style, I was looking into Korean folk art and tried recreating those, however, because the artwork is very detailed, it would make animating it extremely difficult. I could use puppet pins in After Effects, but I honestly do not like the way that puppet pins look most of the time. Instead, I am opting for sticking to a semi-line art style, as a lot of traditional Korean paintings include line art, and incorporating gradients and a noise texture effect onto the images to make it look more paper-like. However, the rest of the style will be simplified, because I want my main focus to be the interactivity, engagement, and flow of it all.
+                </p>
+
+                <br/><br/>
+
+                <h3>Opening Letter Animation</h3>
+                <br/>
+                <video width="90%" height="" controls>
+                    <source src="../Media/Letter Animation Draft.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
+                  <br/><br/>
+                <p>I created a first draft of what I wanted in After Effects, however, it felt too modernized and did not represent the branding I sought after enough. After much deliberation, I decided to start the animation from scratch, despite already spending a lot of time on it.
+                </p>
+                <br/><br/>
+                <video width="90%" height="" controls>
+                    <source src="../Media/Letter Animation.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
+                  <br/><br/>
+                <p>After making design changes, I was much happier with the outcome. I added various noise and texture effects, as well as a gradient, cleaned up the linework, added sounds, and redesigned the burst effect to create this final product. I will be using this as the main transition for all the opening letters of the alphabet, and thankfully a lot of Korean letters recycle the same strokes and lines, so I do not need to alter that many things for each letter. Next week, I will start animating the actual iconography associated with the letters and words.
+                </p>
+                <br/><br/><br/>
             </div>
         </div>
     </span>
