updated blog post

--- a/pages/koreanimation.html
+++ b/pages/koreanimation.html
@@ -201,6 +201,18 @@
                 <p>After making design changes, I was much happier with the outcome. I added various noise and texture effects, as well as a gradient, cleaned up the linework, added sounds, and redesigned the burst effect to create this final product. I will be using this as the main transition for all the opening letters of the alphabet, and thankfully a lot of Korean letters recycle the same strokes and lines, so I do not need to alter that many things for each letter. Next week, I will start animating the actual iconography associated with the letters and words.
                 </p>
                 <br/><br/><br/>
+
+                <h4>March 11th</h4>
+                <h3>Feedback + Revised Outline</h3>
+                <br/>
+                <p>On Monday, we had feedback and critique sessions in class. I got a lot of great input, such as incorporating more cultural elements within the work and adding an English subtitle option for English speakers. Although I do want to make this for all ages, they made a good point on how it would be extra helpful to have a subtitle option for other languages for further accesibility and features. I was also told to put in a home screen where people can choose to start from a certain letter, rather than it being in a linear fashion. This way, people can refer back to certain letters rather than having to go through the whole thing in one sitting. I also agreed with the aspect of including more cultural aspects, since culture is a huge part of the language.</p>
+                <br/><br/>
+                <h3>Cover Sketch</h3>
+                <br/><br/>
+                <img src="../Media/koreanimation header draft.jpg">
+                <br/><br/>
+                <p>Because our senior design showcase forms are due soon, I wanted to finalize my cover on it. This is the sketch for what I had in mind, then I am going to final render it in Adobe Illustrator. Honestly I could not get a lot done this week because of midterms but I am planning on working on it more over the break.</p>
+                <br/><br/><br/>
             </div>
         </div>
     </span>
