--- a/pages/koreanimation.html
+++ b/pages/koreanimation.html
@@ -234,7 +234,7 @@
                 <br/><br/><br/>
 
                 <h4 id="3-25">March 25th</h4>
-                <h3>Feedback + Revised Outline</h3>
+                <h3>Production</h3>
                 <br/>
                 <p>My progress so far has mainly just been doing the actual animations so far. Here is the idle animation for the baby, this is part of the larger file with the actual letter animations. Exporting it takes a long time so here is a screen share of it. </p>
                 <br/><br/>
