moved layout; fixed some styling issues in about and home page

--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,8 @@
     <div class="white-border"></div>
     <a href="../index.html" class="nav-logo">MEGAN KIM</a>
     <div class="nav">
-        <a href="../index.html#work-section">Selected Work</a>
+        <a href="../index.html#work-section">Work</a>
+        <a href="../index.html#mot-graph-section">Motion Graphics</a>
         <a href="../index.html#design-section">Design</a>
         <a href="../index.html#modeling-section">3D Modeling</a>
         <a href="about.html">About Me</a>
@@ -26,7 +27,7 @@
                 <div class="case-study-top">
                     <div class="circle-detail"></div>
                     <div class="circle-detail"></div>
-                    <p><<< go home</p>
+                    <p><<< back</p>
                 </div>
             </a>
             <div class="about-container case-study">
