--- a/pages/koreanimation.html
+++ b/pages/koreanimation.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <br/><br/>
-                <img class="header" src="../Media/header_korean.webp">
+                <img class="header" src="../Media/koreanimation header.png">
                 <br/><br/>
                 <h4>PROBLEM</h4>
                 <p>(//)</p>
