changes home description

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="Media/Logo.png" class="logo">
         <div class="logo-bg-animation2"></div>
         <div class="logo-bg-animation"></div>
-        <p style="max-width: 90vw;">I'm a UX and product designer studying media and technology at NYU.</p>
+        <p style="max-width: 90vw;">I'm a product designer that recently graduated from NYU. <br/><br/> This website is entirely coded and designed by yours truly!</p>
     </div>
     <div class="scrollable-container">
             <span id="work-section" class="sections work-section">
