--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <br/>
-                <p>I am currently studying user experience and product management and I am very passionate about learning the intersection between humans and technology. <br/><br/>My experience as the Director of Operations at New York University’s Motorsports Program has allowed me to not only improve audience response and engagement from rebranding but also foster a meaningful and cross-functional community of engineers. I believe that the culture and passion of a dynamic team are reflected in the products they create, enhancing not only efficiency but also the satisfaction of the team itself. 
+                <p>My passion is learning the intersection between humans and technology through user-friendly design. <br/><br/>My experience as the Director of Operations at New York University’s Motorsports Program has allowed me to not only improve audience response and engagement from rebranding but also foster a meaningful and cross-functional community of engineers. I believe that the culture and passion of a dynamic team are reflected in the products they create, enhancing not only efficiency but also the satisfaction of the team itself. 
                 </p>
                 <br/>  <br/>  
         </div>
