--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="Media/Logo.png" class="logo">
         <div class="logo-bg-animation2"></div>
         <div class="logo-bg-animation"></div>
-        <p style="max-width: 90vw;">I'm a product designer that recently graduated from NYU. <br/><br/> This website is entirely coded and designed by yours truly!</p>
+        <p style="max-width: 90vw;">I specialize in <b>design/motion graphics/illustration</b> and I strive to <br/>bridge the intersection between humans and technology through design. <br/><br/> /* This website was entirely made using HTML/CSS */</p>
     </div>
     <div class="scrollable-container">
             <span id="work-section" class="sections work-section">
@@ -41,9 +41,13 @@
                             <div class="circle-detail"></div>
                             <p>learn more >>></p>
                         </div>
-                        <img src="Media/clicksters-team.png">
-                        <h3>1st Place 2023 Dibner Hackathon: <br/>Developed AI Chatbot to Streamline Printing Needs </h3>
-                        <p>Our team won 1st place and audience favorite at the 2023 Hack Dibner competition. We went through rounds of surveys, user interviews, ideation, prototyping, and testing to create Dibby: a friendly AI chatbot that streamlines the printing experience for all students and staff at Dibner Library.</p>
+                        <div class="case-study-right">
+                            <img style="background-color: #4B0872;" src="Media/Dibby Media/Dibby Logo.png">
+                            <div class="case-study-text">
+                                <h3>Dibby</h3>
+                                <p>Our team won the 1st place and audience favorite awards at the 2023 Hack Dibner competition. <br/><br/> We went through rounds of surveys, user interviews, ideation, prototyping, and testing to create Dibby: a friendly AI chatbot that streamlines the printing experience for all students and staff at Dibner Library.</p>
+                            </div>
+                        </div>
                     </div>
                 </a>
                 <br/><br/><br/>
@@ -54,9 +58,30 @@
                             <div class="circle-detail"></div>
                             <p>learn more >>></p>
                         </div>
-                        <img src="Media/koreanimation header.png">
-                        <h3>K오REANIMATION: <br/>Interactive Korean Language Learning</h3>
-                        <p>I'm crafting an interactive and educational website to simplify the Korean alphabet for all ages. Utilizing motion graphics, users experience the language visually and audibly, learning through animations that transform letters into words, inspired by traditional Korean patterns and elements. This project aims to intersect technology, education, and culture, offering a fun and entertaining way to explore the beauty of the Korean language.</p>
+                        <div class="case-study-right">
+                            <img src="Media/koreanimation header.png">
+                            <div class="case-study-text">
+                                <h3>Koreanimation</h3>
+                                <p>I'm crafting an interactive and educational website to simplify the Korean alphabet for all ages. <br/><br/>This project aims to intersect technology, education, and South Korean culture, offering a fun and entertaining way to explore the beauty of the Korean language through studied traditional patterns and elements.</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <br/><br/><br/>
+                <a href="pages/koreanimation.html">
+                    <div class="case-study-container">
+                        <div class="case-study-top">
+                            <div class="circle-detail"></div>
+                            <div class="circle-detail"></div>
+                            <p>learn more >>></p>
+                        </div>
+                        <div class="case-study-right">
+                            <img src="Media/koreanimation header.png">
+                            <div class="case-study-text">
+                                <h3>NYU Motorsports</h3>
+                                <p>I'm crafting an interactive and educational website to simplify the Korean alphabet for all ages. <br/><br/>This project aims to intersect technology, education, and South Korean culture, offering a fun and entertaining way to explore the beauty of the Korean language through studied traditional patterns and elements.</p>
+                            </div>
+                        </div>
                     </div>
                 </a>
             </span>
