--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <p>learn more >>></p>
                         </div>
                         <div class="case-study-right">
-                            <img src="Media/koreanimation header.png">
+                            <img src="Media/Koreanimation Media/koreanimation thumbnail.png">
                             <div class="case-study-text">
                                 <h3>Koreanimation</h3>
                                 <p>I'm crafting an interactive and educational website to simplify the Korean alphabet for all ages. <br/><br/>This project aims to intersect technology, education, and South Korean culture, offering a fun and entertaining way to explore the beauty of the Korean language through studied traditional patterns and elements.</p>
