--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                         <div class="case-study-right">
                             <img src="Media/koreanimation header.png">
                             <div class="case-study-text">
-                                <h3>NYU Motorsports</h3>
-                                <p>I'm crafting an interactive and educational website to simplify the Korean alphabet for all ages. <br/><br/>This project aims to intersect technology, education, and South Korean culture, offering a fun and entertaining way to explore the beauty of the Korean language through studied traditional patterns and elements.</p>
+                                <h3>NYU Classroom AVM User Guides</h3>
+                                <p>I designed the audio visual media user guides for over 60+ classrooms and event spaces within NYU Steinhardt. <br/><br/>During my time at Steinhardt Technology Services, I intitiated and led a project focused on enhancing the UX/UI design of our guides to ensure a more intuitive and user-friendly experience for faculty and staff.</p>
                             </div>
                         </div>
                     </div>
